# v2x_ball_bot

code_git/: test_git.txt
install/: local_setup.sh  setup.sh
install/v2x_ball_bot/share/v2x_ball_bot/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/v2x_ball_bot/: package.xml  setup.cfg  setup.py
src/v2x_ball_bot/v2x_ball_bot/: ball_node.py
src/v2x_ball_bot/v2x_ball_bot/v2x_ball_bot_bringup/launch/: v2x_ball_bot_launch.py
src/v2x_ball_bot/v2x_ball_bot/v2x_ball_bot_control/: ball_detector_node.py  ball_pickup_node.py  motion_controller_node.py  obstacle_avoidance_node.py  path_planner_node.py  trajectory_predictor_node.py
