<?xml version="1.0"?>
<package format="3">
  <name>v2x_ball_bot</name>
  <version>0.0.0</version>
  <description>V2X ROS2 bot</description>
  <maintainer email="none@example.com">sunnyangee</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
